--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -40,7 +40,7 @@
     @apply h-full w-full flex pb-2 px-2 min-h-20 flex-col duration-300 self-center;
 }
 .bottom-holder .content{
-    @apply max-w-5xl bg-white bg-opacity-50 backdrop-blur-md flex-grow w-full h-full overflow-auto rounded-xl flex-col flex self-center p-2;
+    @apply max-w-5xl bg-white bg-opacity-50 backdrop-blur-md flex-grow w-full h-full overflow-auto rounded-xl flex-col flex self-center p-5;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 .ai-s-child{
@@ -51,4 +51,29 @@
 }
 .ai-s-child .no-sug{
     @apply w-fit self-center gap-2 text-gray-700 justify-center *:has-[svg]:inline-block *:has-[svg]:mr-1 p-2 rounded-xl my-3
+}
+.content .fetures-sec{
+    @apply w-full ;
+}
+.content .fetures-sec .title{
+    @apply text-lg *:*:inline-block *:has-[svg]:inline-block *:has-[svg]:mr-1;
+}
+.content .fetures-sec .title span{
+    @apply bg-yellow-200 px-2 rounded-full text-sm shadow-md;
+    font-family: "Gloria Hallelujah", cursive;
+}
+.content .fetures-sec .title span svg{
+    @apply w-3 h-3;
+}
+.content .fetures-sec .f-list{
+    @apply flex flex-wrap mt-5 gap-5;
+}
+.content .fetures-sec .f-list .f-item{
+    @apply flex flex-col justify-between bg-slate-50 w-full max-w-80 p-3 rounded-xl shadow-md gap-3;
+}
+.content .fetures-sec .f-list .f-item h1{
+    @apply text-xl font-bold;
+}
+.content .fetures-sec .f-list .f-item button{
+    @apply self-end  content-end flex-none w-fit bg-blue-100 p-1 px-2 rounded-lg inline-flex items-center gap-2;
 }
