--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -12,7 +12,7 @@
     @apply  p-2 flex justify-between px-4 items-center max-w-5xl w-full relative;
 }
 .top-holder .top-menu .left{
-    @apply flex items-center gap-2
+    @apply flex items-center gap-2 z-10 bg-white bg-opacity-60 backdrop-blur-md rounded-md;
 }
 .top-holder .top-menu .profile-holder{
     @apply w-10 min-w-10 h-10 rounded-full overflow-hidden p-[2px] bg-white *:rounded-full shadow-md;
@@ -24,17 +24,17 @@
     @apply text-lg font-bold
 }
 .top-holder .top-menu .left p{
-    @apply inline-flex *:inline-flex items-center gap-2 *:items-center text-sm
+    @apply inline-flex *:inline-flex items-center gap-2 *:items-center text-sm 
 }
 .top-holder .top-menu .left span{
-    @apply bg-yellow-300 text-xs shadow-md flex gap-1 px-2 rounded-full;
+    @apply bg-yellow-300 text-xs shadow-md flex gap-1 sm:px-2 rounded-full overflow-hidden max-w-5 sm:max-w-full px-1 duration-300;
     font-family: "Gloria Hallelujah", cursive;
 }
 .top-holder .top-menu .left svg{
-    @apply w-3
+    @apply min-w-3
 }
 .top-holder .flo-obj-img{
-    @apply w-80 absolute right-2 top-0;
+    @apply w-80 absolute right-2 top-0 z-0;
 }
 .bottom-holder{
     @apply h-full w-full flex pb-2 px-2 min-h-20 flex-col duration-300 self-center;
@@ -66,7 +66,7 @@
     @apply w-3 h-3;
 }
 .content .fetures-sec .f-list{
-    @apply flex flex-wrap mt-5 gap-5;
+    @apply flex flex-wrap mt-5 mx-3 gap-5;
 }
 .content .fetures-sec .f-list .f-item{
     @apply flex flex-col justify-between bg-slate-50 w-full max-w-80 p-3 rounded-xl shadow-md gap-3;
@@ -74,6 +74,9 @@
 .content .fetures-sec .f-list .f-item h1{
     @apply text-xl font-bold;
 }
+.content .fetures-sec .f-list .f-item h1 svg{
+    @apply inline-block w-5 h-5 mr-2;
+}
 .content .fetures-sec .f-list .f-item button{
-    @apply self-end  content-end flex-none w-fit bg-blue-100 p-1 px-2 rounded-lg inline-flex items-center gap-2;
+    @apply self-end  content-end flex-none w-fit bg-blue-100 p-1 px-2 rounded-lg inline-flex items-center gap-2 hover:gap-3 duration-300 hover:shadow-md;
 }
