feat: add loading buttons to AISuggestions component and update styles

--- a/src/pages/dashboard/AIsuggesions.css
+++ b/src/pages/dashboard/AIsuggesions.css
@@ -10,6 +10,9 @@
 .ai-sug-holder .unit-list .unit-item{ 
     @apply bg-slate-50 p-[2px] px-3 rounded-full text-slate-700 border-2 data-[active=true]:text-white data-[active=true]:border-slate-700 data-[active=true]:bg-slate-700 hover:bg-white hover:shadow-sm duration-300;
 }
+.ai-sug-holder .unit-list .loading-button{ 
+    @apply p-[2px] px-3 rounded-full text-slate-700 border-2 data-[active=true]:text-white data-[active=true]:border-slate-700 data-[active=true]:bg-slate-700 hover:bg-white hover:shadow-sm duration-300;
+}
 .ai-sug-holder .tag-list{
     @apply bg-white rounded-lg m-1 p-2 flex flex-wrap gap-3;
 }
